# ReadEcho

./: .env.template  .gitignore  Dockerfile  EXE_Update_README.md  README.md  ReadEcho_Pro.py  ReadEcho_Pro.spec  ReadEcho_Pro_Exe.bat  ReadEcho_User.bat  __init__.py  ai_processor.py  app_services.py  book_search.py  config.py  database_manager.py  docker-compose.yml  event_handler.py  log.txt  main.py  model_cache.py  pyproject.toml  pytest.ini  readecho.db  readecho_v1.db  readme.txt  recording_manager.py  run_tests.bat  speak.py  start.bat  text.py  ui_builder.py  update_exe.bat  utils.py  validators.py
.github/workflows/: ci.yml
docs/: CHANGELOG.md  DEVELOPMENT.md  README.md
docs/guides/: development_guide.md
docs/reports/: code_quality_report.md  optimization_summary.md  test_coverage_report.md
tests/: .gitignore  CHANGELOG.md  DAILY_SUMMARY.md  DELIVERY.md  FINAL_STATUS.md  README.md  RUN_LOG.md  STATUS.md  SUMMARY.md  TODO.md  UPDATE_LOG.md  __init__.py  conftest.py  run_tests.bat
tests/integration/: test_integration.py
tests/unit/: test_app_services.py  test_book_search.py  test_database_manager.py  test_model_cache.py  test_utils.py  test_validators.py
